// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChedioButtox renders when disabled 1`] = `
<label
  className="ax-chedio-buttox__container ax-chedio-buttox__container--disabled ax-space--tiny"
>
  <input
    className="ax-chedio-buttox ax-ipsum"
    disabled={true}
    type="checkbox"
  />
  <span
    className="ax-chedio-buttox__indicator ax-lorem"
  />
  <span
    className="ax-chedio-buttox__label"
  >
    Lorem ipsum
  </span>
</label>
`;

exports[`ChedioButtox renders with defaultProps 1`] = `
<label
  className="ax-chedio-buttox__container ax-space--tiny"
>
  <input
    className="ax-chedio-buttox ax-ipsum"
    disabled={undefined}
    type="checkbox"
  />
  <span
    className="ax-chedio-buttox__indicator ax-lorem"
  />
  <span
    className="ax-chedio-buttox__label"
  >
    Lorem ipsum
  </span>
</label>
`;
